--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,15 @@ services:
     networks:
       - todo-network
     deploy:
+      placement:
+        constraints:
+          - node.role == worker
       mode: replicated
       replicas: 1
-    resources:
-      limits:
-        cpus: "0.25"
-        memory: 512M
+      resources:
+        limits:
+          cpus: "0.25"
+          memory: 512M
 
 networks:
   todo-network:
