--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,25 @@ jobs:
       - name: Pull image from ghcr
         run: docker pull ghcr.io/${{github.repository}}/todoback:latest
 
+      - name: Generate .env file
+        working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
+        run: |
+          echo "NODE_ENV=production" > .env
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
+          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
+
       - name: Deploy docker stack
         working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
-        env:
-          NODE_ENV: production
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-        run: |
-          docker stack deploy -c docker-compose.yml --with-registry-auth todoback
+        run: docker stack deploy -c docker-compose.yml --with-registry-auth todoback
+      # - name: Deploy docker stack
+      #   working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
+      #   env:
+      #     NODE_ENV: production
+      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      #     GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      #     GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+      #   run: |
+      #     docker stack deploy -c docker-compose.yml --with-registry-auth todoback
