--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.2"
 
 services:
   todoback:
-    image: ghcr.io/dxskull/todoback:latest
+    image: ghcr.io/dxskull/todoback/todoback:latest
     ports:
-      - "5000:3000"
+      - "3000:5000"
     environment:
       NODE_ENV: production
       MONGODB_URI: ${MONGODB_URI}
