--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,32 +41,13 @@ jobs:
       - name: Pull image from ghcr
         run: docker pull ghcr.io/${{github.repository}}/todoback:latest
 
-      - name: Generate .env file
+      - name: Deploy docker stack
         working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
+        env:
+          NODE_ENV: production
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         run: |
-          echo "NODE_ENV=production" > .env
-          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
-          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
-          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
-      - name: Load env vars and deploy
-        working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
-        run: |
-          set -o allexport
-          source .env
-          set +o allexport
-          docker stack deploy -c docker-compose.yml --with-registry-auth todoback
-
-      # - name: Deploy docker stack
-      #   working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
-      #   run: docker stack deploy -c docker-compose.yml --with-registry-auth todoback
-      # - name: Deploy docker stack
-      #   working-directory: ${{ secrets.WORKING_DIRECTORY }}/todoback
-      #   env:
-      #     NODE_ENV: production
-      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      #     GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-      #     GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-      #   run: |
-      #     docker stack deploy -c docker-compose.yml --with-registry-auth todoback
+          docker stack deploy -c docker-compose-back.yml --with-registry-auth todoback
